# snakemake-software-deployment-plugin-guix

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/snakemake_software_deployment_plugin_guix/: __init__.py
tests/: test_plugin.py
tests/guix/: channels.scm  manifest.csm
